ft(notification): handle email and in-app notification
create model for notifications
create service for saving notification
write multiple language translations
write tests
create util for sending notification email
add routes for toggling email and in-app notification status

[Finishes #175636861]
