# src/routes/api/index.js
@@ -3,8 +3,10 @@ import User from "./users.route";
 import Request from "./request.route";
 import Comment from "./comment.route";
 import tripRequest from "./tripRequest.route";
-import i18n from "../../utils/i18n";
-import Accommodation from "./accommodation.route"
+import i18n from "../../utils/i18n.js";
+import Accommodation from "./accommodation.route";
+import Notification from "./notifications.route";
+
 const router = express.Router();
 
 router.use(i18n.init);
@@ -12,7 +14,7 @@ router.use("/", User);
 router.use("/", Comment);
 router.use("/", tripRequest);
 router.use("/", Request);
-router.use("/",Accommodation);
-
+router.use("/", Accommodation);
+router.use("/", Notification);
 
 export default router;
